# muc

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  muc-universe.in  muc-universe.template
include/: CMakeLists.txt  muc-universe
include/muc/: algorithm  array  bit  btree_map  btree_set  ceta_string  chrono  concepts  ctype  functional  future  graph  graph.old  hash_map  hash_set  iterator  math  memory  mutex  numeric  optional  ptr_span  ptr_vector  ptrvec  time  tuple  type_traits  utility
include/muc/deprecated/: ptr_span  ptr_vector
include/muc/detail/c++11/btree_map/: btree_map.h++
include/muc/detail/c++11/btree_set/: btree_set.h++
include/muc/detail/c++11/hash_map/: hash_map.h++
include/muc/detail/c++11/hash_set/: hash_set.h++
include/muc/detail/c++11/time/: localtime.h++
include/muc/detail/c++17/array/: arraynx.h++
include/muc/detail/c++17/bit/: bit_cast.h++  bit_size.h++  byteswap.h++  has_single_bit.h++  rotl.h++  rotr.h++
include/muc/detail/c++17/bit/impl/: is_really_unsigned_integral.h++
include/muc/detail/c++17/btree_map/: btree_map.h++
include/muc/detail/c++17/btree_set/: btree_set.h++
include/muc/detail/c++17/chrono/: duration.h++  processor_stopwatch.h++  steady_high_resolution_clock.h++  stopwatch.h++  thread_stopwatch.h++
include/muc/detail/c++17/ctype/: ctype.h++
include/muc/detail/c++17/functional/: identity.h++  multidentity.h++
include/muc/detail/c++17/future/: defer.h++
include/muc/detail/c++17/graph/: graph.h++
include/muc/detail/c++17/hash_map/: hash_map.h++
include/muc/detail/c++17/hash_set/: hash_set.h++
include/muc/detail/c++17/math/: ceil_to.h++  constexpr_cmath.h++  digits_of.h++  factorial.h++  floor_to.h++  fmod.h++  hypot.h++  lerp.h++  llround.h++  lltrunc.h++  parity.h++  pow.h++  relu.h++  round.h++  round_to.h++  sigmoid.h++  sincos.h++  trunc_to.h++
include/muc/detail/c++17/memory/: allocate_unique.h++  allocator_delete.h++  allocator_deleter.h++  construct_at.h++  placement.h++  to_address.h++
include/muc/detail/c++17/numeric/: bilerp.h++  default_tolerance.h++  find_root.h++  isclose.h++  lerp.h++  midpoint.h++  soft_cmp.h++  tolerance.h++  trilerp.h++
include/muc/detail/c++17/optional/: optional_ref.h++
include/muc/detail/c++17/ptr_span/: ptr_span.h++
include/muc/detail/c++17/ptr_vector/: shared_ptr_vector.h++  unique_ptr_vector.h++
include/muc/detail/c++17/ptrvec/: ptrvec.h++
include/muc/detail/c++17/time/: cpu_time_stopwatch.h++  localtime.h++  wall_time_stopwatch.h++
include/muc/detail/c++17/type_traits/: is_arithmetic_operable_with.h++  is_bounded_array.h++  is_complete.h++  is_contained_in.h++  is_general_arithmetic.h++  is_scoped_enum.h++  is_template_of.h++  is_unbounded_array.h++  is_uniquely_contained_in.h++  remove_cref.h++  remove_cvref.h++  remove_vref.h++  type_count.h++  type_identity.h++
include/muc/detail/c++17/utility/: assume.h++  cpu_relax.h++  dependent_constexpr.h++  forward_like.h++  to_signed.h++  to_underlying.h++  to_unsigned.h++  try_demangle.h++  type_tag.h++  unreachable.h++
include/muc/detail/c++20/: ceta_string.h++
include/muc/detail/c++20/algorithm/: contains.h++  contains_subrange.h++  timsort.h++
include/muc/detail/c++20/ceta_string/: ceta_string.h++
include/muc/detail/c++20/concepts/: arithmetic.h++  boolean_testable.h++  character.h++  copy_assignable.h++  fundamental.h++  general_arithmetic.h++  instantiated_from.h++  move_assignable.h++  stream_ioable.h++
include/muc/detail/c++20/iterator/: projected_value_t.h++
include/muc/detail/c++20/math/: clamp.h++
include/muc/detail/c++20/mutex/: spin_mutex.h++
include/muc/detail/c++20/numeric/: polynomial.h++  ranges_iota.h++  ranges_numeric.h++  rational.h++
include/muc/detail/c++20/tuple/: applicable_on.h++  apply.h++  pair_like.h++  to_std_tuple.h++  tuple_concat.h++  tuple_contains.h++  tuple_count.h++  tuple_like.h++  tuple_unique.h++
include/muc/detail/c++20/type_traits/: is_type_set.h++
include/muc/detail/common/: inline_macro.h++
include/muc/impl/c++17/array/: arraynx.h++
include/muc/impl/c++17/bit/: bit_cast.h++  bit_size.h++  byteswap.h++  rotl.h++
include/muc/impl/c++17/math/: constexpr_cmath.h++  find_root.h++  hypot.h++  lerp.h++  midpoint.h++
include/muc/impl/c++17/numeric/: find_root.h++  midpoint.h++
include/muc/impl/c++17/ptr_vector/: shared_ptr_vector.h++  unique_ptr_vector.h++
include/muc/impl/c++17/time/: cpu_time_stopwatch.h++  wall_time_stopwatch.h++
include/muc/impl/c++17/type_traits/: is_arithmetic_operable_with.h++  is_general_arithmetic.h++  is_scoped_enum.h++  is_template_of.h++  remove_cref.h++
include/muc/impl/c++20/: ceta_string.h++
include/muc/impl/c++20/concepts/: copy_assignable.h++  instantiated_from.h++
include/muc/impl/c++20/tuple/: applicable_on.h++  apply.h++  pair_like.h++  to_std_tuple.h++  tuple_concat.h++  tuple_contains.h++  tuple_count.h++  tuple_like.h++
muc/: bit  bit.h++  ceta_string  graph  math  memory  memory.h++  ptr_vector  ptr_vector.h++  time  type_traits
muc/impl/c++17/bit/: bit_cast.h++  bit_width.h++  has_single_bit.h++  rotl.h++  rotr.h++
muc/impl/c++17/math/: constexpr_cmath.h++  digits_of.h++  find_root.h++  hypot.h++  llround.h++  lltrunc.h++  midpoint.h++  pow.h++
muc/impl/c++17/memory/: allocate_unique.h++  placement.h++  to_address.h++
muc/impl/c++17/ptr_vector/: ptr_vector_base.h++  shared_ptr_vector.h++  unique_ptr_vector.h++
muc/impl/c++17/ptr_vector/impl/: ptr_vector_base.h++
muc/impl/c++17/time/: cpu_time_stopwatch.h++  wall_time_stopwatch.h++
muc/impl/c++17/type_traits/: is_arithmetic_operable_with.h++  is_bounded_array.h++  is_general_arithmetic.h++  is_scoped_enum.h++  is_unbounded_array.h++  remove_cvref.h++
muc/impl/c++17/type_traits/impl/: has_binary_arithmetic_with.h++
muc/impl/c++20/: ceta_string.h++
muc/impl/c++20/math/: clamp.h++
test/: CMakeLists.txt  ceta_string.c++  find_root.c++  math.c++  ptr_span.c++  ptr_vector.c++  shared_ptr_vector.c++  stopwatch.c++  type_traits.c++  unique_ptr_vector.c++
tools/: amalgamate.bash
(+31 files in other folders)
